--- a/Dani_Cyberpunk 2077.html
+++ b/Dani_Cyberpunk 2077.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cyberpunk 2077">
     <meta name="keywords" content="Cyberpunk 2077, Cyberpunk, Játék">
-   
-    <title>Csipet csapat</title>
+    <link rel="stylesheet" href="formazas.css">
+    <title>Csipet csapat</title>    
 </head>
 <body>
+    <a href="cs.html" class="button">CSGO</a>
+    <a href="Dani_Cyberpunk 2077.html" class="button">Cyberpunk 2077</a>
+    <a href="index.html" class="button">Scrap Mechanic</a>
+    <a href="valorant.html" class="button">Valorant</a>
 <h1>Cyberpunk 2077</h1>
 
 <h2>Kik is készítették a Cyberpunk 2077-et?</h2>
